fix image file path

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
      </header>
     <section>
          <div>
-            <img src="C:\Users\Natali\Desktop\git\CV-cross-check\rsschool-cv\assets\img\4.jpg" alt="my-photo">
+            <img src="assets\img\4.jpg" alt="my-photo">
             <h1>Nataliya Pererva</h1>
             <p>Front-end developer</p>
         </div>
